--- a/cars/model_vector_drag/body_vectors.ipynb
+++ b/cars/model_vector_drag/body_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
       "\tIf 'regression' is not the correct problem_type, please manually specify the problem_type parameter during predictor init (You may specify problem_type as one of: ['binary', 'multiclass', 'regression'])\n",
       "Using Feature Generators to preprocess the data ...\n",
       "Fitting AutoMLPipelineFeatureGenerator...\n",
-      "\tAvailable Memory:                    250062.92 MB\n",
+      "\tAvailable Memory:                    238353.24 MB\n",
       "\tTrain Data (Original)  Memory Usage: 0.18 MB (0.0% of available memory)\n",
       "\tInferring data type of each feature based on column values. Set feature_metadata_in to manually specify special dtypes of the features.\n",
       "\tStage 1 Generators:\n",
@@ -297,10 +297,10 @@
       "\t\t('float', []) : 64 | ['dim_1', 'dim_2', 'dim_3', 'dim_4', 'dim_5', ...]\n",
       "\tTypes of features in processed data (raw dtype, special dtypes):\n",
       "\t\t('float', []) : 64 | ['dim_1', 'dim_2', 'dim_3', 'dim_4', 'dim_5', ...]\n",
-      "\t0.2s = Fit runtime\n",
+      "\t0.1s = Fit runtime\n",
       "\t64 features in original data used to generate 64 features in processed data.\n",
       "\tTrain Data (Processed) Memory Usage: 0.18 MB (0.0% of available memory)\n",
-      "Data preprocessing and feature engineering runtime = 0.2s ...\n",
+      "Data preprocessing and feature engineering runtime = 0.18s ...\n",
       "AutoGluon will gauge predictive performance using evaluation metric: 'root_mean_squared_error'\n",
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "\tTo change this, specify the eval_metric parameter of Predictor()\n",
@@ -308,59 +308,59 @@
       "Fitting model: KNeighborsUnif_BAG_L1 ...\n",
       "\t-0.0575\t = Validation score   (-root_mean_squared_error)\n",
       "\t0.02s\t = Training   runtime\n",
-      "\t0.19s\t = Validation runtime\n",
+      "\t0.32s\t = Validation runtime\n",
       "Fitting model: KNeighborsDist_BAG_L1 ...\n",
       "\t-0.0572\t = Validation score   (-root_mean_squared_error)\n",
       "\t0.01s\t = Training   runtime\n",
-      "\t0.24s\t = Validation runtime\n",
+      "\t0.27s\t = Validation runtime\n",
       "Fitting model: LightGBMXT_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.0528\t = Validation score   (-root_mean_squared_error)\n",
-      "\t1.32s\t = Training   runtime\n",
+      "\t1.41s\t = Training   runtime\n",
       "\t0.02s\t = Validation runtime\n",
       "Fitting model: LightGBM_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.0531\t = Validation score   (-root_mean_squared_error)\n",
-      "\t7.44s\t = Training   runtime\n",
+      "\t8.49s\t = Training   runtime\n",
       "\t0.05s\t = Validation runtime\n",
       "Fitting model: RandomForestMSE_BAG_L1 ...\n",
       "\t-0.054\t = Validation score   (-root_mean_squared_error)\n",
-      "\t1.2s\t = Training   runtime\n",
-      "\t0.15s\t = Validation runtime\n",
+      "\t1.14s\t = Training   runtime\n",
+      "\t0.2s\t = Validation runtime\n",
       "Fitting model: CatBoost_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.0535\t = Validation score   (-root_mean_squared_error)\n",
-      "\t16.35s\t = Training   runtime\n",
+      "\t16.97s\t = Training   runtime\n",
       "\t0.07s\t = Validation runtime\n",
       "Fitting model: ExtraTreesMSE_BAG_L1 ...\n",
       "\t-0.0535\t = Validation score   (-root_mean_squared_error)\n",
-      "\t1.21s\t = Training   runtime\n",
-      "\t0.16s\t = Validation runtime\n",
+      "\t1.18s\t = Training   runtime\n",
+      "\t0.21s\t = Validation runtime\n",
       "Fitting model: NeuralNetFastAI_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.0512\t = Validation score   (-root_mean_squared_error)\n",
-      "\t3.78s\t = Training   runtime\n",
-      "\t0.13s\t = Validation runtime\n",
+      "\t3.7s\t = Training   runtime\n",
+      "\t0.12s\t = Validation runtime\n",
       "Fitting model: XGBoost_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.0556\t = Validation score   (-root_mean_squared_error)\n",
-      "\t5.5s\t = Training   runtime\n",
-      "\t0.23s\t = Validation runtime\n",
+      "\t2.05s\t = Training   runtime\n",
+      "\t0.05s\t = Validation runtime\n",
       "Fitting model: NeuralNetTorch_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.051\t = Validation score   (-root_mean_squared_error)\n",
-      "\t17.15s\t = Training   runtime\n",
-      "\t0.47s\t = Validation runtime\n",
+      "\t6.99s\t = Training   runtime\n",
+      "\t0.16s\t = Validation runtime\n",
       "Fitting model: LightGBMLarge_BAG_L1 ...\n",
       "\tFitting 10 child models (S1F1 - S1F10) | Fitting with ParallelLocalFoldFittingStrategy\n",
       "\t-0.055\t = Validation score   (-root_mean_squared_error)\n",
-      "\t25.97s\t = Training   runtime\n",
-      "\t0.22s\t = Validation runtime\n",
+      "\t17.15s\t = Training   runtime\n",
+      "\t0.06s\t = Validation runtime\n",
       "Fitting model: WeightedEnsemble_L2 ...\n",
       "\t-0.0494\t = Validation score   (-root_mean_squared_error)\n",
-      "\t0.9s\t = Training   runtime\n",
+      "\t0.48s\t = Training   runtime\n",
       "\t0.0s\t = Validation runtime\n",
-      "AutoGluon training complete, total runtime = 108.08s ... Best model: \"WeightedEnsemble_L2\"\n",
+      "AutoGluon training complete, total runtime = 88.42s ... Best model: \"WeightedEnsemble_L2\"\n",
       "TabularPredictor saved. To load, use: predictor = TabularPredictor.load(\"./agModels-body/\")\n"
      ]
     }
@@ -372,12 +372,12 @@
     "    os.makedirs(save_path)\n",
     "\n",
     "metric = 'root_mean_squared_error' #Regression:mean_absolute_error, mean_squared_error,root_mean_squared_error (default), r2\n",
-    "predictor = TabularPredictor(label=label, path=save_path, eval_metric=metric).fit(train_data, presets='best_quality', num_bag_folds=10)"
+    "predictor = TabularPredictor(label=label, path=save_path, eval_metric=metric).fit(train_data, presets='best_quality', num_bag_folds=10, num_bag_sets=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,22 +590,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluation: root_mean_squared_error on test data: -0.04985848072986079\n",
+      "Evaluation: root_mean_squared_error on test data: -0.04985847967094862\n",
       "\tNote: Scores are always higher_is_better. This metric score can be multiplied by -1 to get the metric value.\n",
       "Evaluations on test data:\n",
       "{\n",
-      "    \"root_mean_squared_error\": -0.04985848072986079,\n",
-      "    \"mean_squared_error\": -0.002485868100689899,\n",
-      "    \"mean_absolute_error\": -0.03601817694848234,\n",
-      "    \"r2\": 0.1546423327403308,\n",
-      "    \"pearsonr\": 0.39703456246910807,\n",
+      "    \"root_mean_squared_error\": -0.04985847967094862,\n",
+      "    \"mean_squared_error\": -0.002485867995098397,\n",
+      "    \"mean_absolute_error\": -0.03601817627115683,\n",
+      "    \"r2\": 0.15464236864834446,\n",
+      "    \"pearsonr\": 0.39703459641007743,\n",
       "    \"median_absolute_error\": -0.026047300100326548\n",
       "}\n"
      ]
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
