--- a/cars/cars_439/ray_test_vectorization.ipynb
+++ b/cars/cars_439/ray_test_vectorization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
     "    vec_list = []\n",
     "    x_pm, y_pm, z_pm = setting\n",
     "    for folder in folders[:3]:\n",
-    "        mesh_file = os.path.join('./cars' + '/' + folder + '/' + 'car_reg.obj')\n",
+    "        mesh_file = os.path.join('./cars' + '/' + folder + '/' + 'car_reg_water.obj')\n",
     "        mesh = trimesh.load(mesh_file)\n",
     "        sd = sdf_binary(mesh, x=x_pm, y=y_pm, z=z_pm)\n",
     "        vec_list.append(np.array(sd))\n",
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
