--- a/cars/model_vector_drag/body_vectors_GPR.ipynb
+++ b/cars/model_vector_drag/body_vectors_GPR.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,43 +51,19 @@
     "regressor = GaussianProcessRegressor(kernel=kernel)\n",
     "\n",
     "# Create a bagging regressor \n",
-    "bagging = BaggingRegressor(estimator=regressor, n_estimators=2, max_samples=0.9) #num_of_bag_folds=10\n"
+    "bagging = BaggingRegressor(estimator=regressor, n_estimators=1, max_samples=0.9) #num_of_bag_folds=10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/home/xli/anaconda3/envs/surrogate/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:420: ConvergenceWarning: The optimal value found for dimension 0 of parameter k1__constant_value is close to the specified lower bound 0.1. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.07813360408109538\n"
+      "-0.00348748498405671\n"
      ]
     },
     {
@@ -108,17 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predict on the test set\n",
-    "y_pred = bagging.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -127,23 +93,23 @@
      "text": [
       "Mean squared error: 0.00\n",
       "Mean absolute error: 0.04\n",
-      "R-squared score: -0.08\n",
+      "R-squared score: -0.00\n",
       "Predicted values for the test set: \n",
-      " [0.3887946  0.38228449 0.41024166 0.35277966 0.38162925 0.40445679\n",
-      " 0.41245201 0.51078955 0.41893717 0.32749378 0.3825325  0.42019822\n",
-      " 0.34847265 0.42424826 0.4350013  0.37412684 0.40346836 0.38685893\n",
-      " 0.37994569 0.36167888 0.42197174 0.41283474 0.38684633 0.43852262\n",
-      " 0.41727988 0.35722751 0.41297735 0.36371476 0.42646839 0.3876802\n",
-      " 0.43254485 0.37338681 0.35670031 0.46829915 0.46333803 0.35601469\n",
-      " 0.37246376 0.33075217 0.39545375 0.39807923 0.36897576 0.35083804\n",
-      " 0.49653424 0.38827944 0.40792767 0.41429535 0.41487797 0.37441261\n",
-      " 0.34314341 0.37306515 0.380766   0.33281549 0.43790477 0.39227465\n",
-      " 0.35079794 0.38344307 0.31216745 0.37879959 0.37978498 0.33863875\n",
-      " 0.4102129  0.36397709 0.37197521 0.43602804 0.36105662 0.34072384\n",
-      " 0.35845482 0.33277277 0.3638751  0.43595319 0.38292276 0.37569101\n",
-      " 0.36755575 0.39387598 0.40310538 0.32935135 0.42223735 0.37648268\n",
-      " 0.38359514 0.34872201 0.37225638 0.3460776  0.3675208  0.34930839\n",
-      " 0.34438585 0.41837246 0.39649996 0.359533  ]\n",
+      " [0.39331189 0.43553162 0.42103127 0.37085905 0.38567656 0.34954057\n",
+      " 0.45160629 0.52620509 0.43361125 0.37161845 0.33828377 0.39645471\n",
+      " 0.29872165 0.46277638 0.45001071 0.49594642 0.39306591 0.40637405\n",
+      " 0.34682706 0.33036146 0.42648211 0.44764149 0.35775133 0.41959537\n",
+      " 0.47420464 0.34140918 0.44518702 0.39110708 0.38408145 0.440202\n",
+      " 0.42011505 0.33348116 0.37182121 0.46762898 0.42055769 0.36474962\n",
+      " 0.41807224 0.39965633 0.30957448 0.36848305 0.44427272 0.33020776\n",
+      " 0.45942826 0.38661483 0.40567441 0.36212657 0.371219   0.3393408\n",
+      " 0.34487602 0.37798141 0.3485789  0.34549011 0.50873658 0.40935867\n",
+      " 0.35486385 0.38766276 0.31738153 0.40575724 0.37965511 0.36932747\n",
+      " 0.4229962  0.41513743 0.39068135 0.40652576 0.34433015 0.34566929\n",
+      " 0.38577453 0.3373296  0.42909842 0.41008028 0.36226532 0.36085703\n",
+      " 0.37978488 0.36302165 0.39090818 0.40584127 0.44837786 0.41568631\n",
+      " 0.34334682 0.41020391 0.38405247 0.38072585 0.3872214  0.39992924\n",
+      " 0.39229489 0.43354994 0.40407569 0.39448936]\n",
       "[0.548 0.37  0.38  0.431 0.38  0.486 0.435 0.496 0.414 0.314 0.326 0.39\n",
       " 0.361 0.541 0.429 0.483 0.426 0.409 0.369 0.32  0.398 0.331 0.327 0.373\n",
       " 0.431 0.371 0.435 0.336 0.388 0.419 0.445 0.35  0.364 0.413 0.413 0.41\n",
@@ -157,6 +123,9 @@
    ],
    "source": [
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = bagging.predict(X_test)\n",
     "# Calculate mean squared error and mean absolute error\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
